--- a/index.html
+++ b/index.html
@@ -53,15 +53,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Formular Überschrift</h1>
-        <p>Hier ist der Text, der unter der Überschrift steht. Bitte füllen Sie das Formular aus.</p>
-        <input type="text" placeholder="Geben Sie hier Ihre Informationen ein">
-        <select>
-            <option>Option 1</option>
-            <option>Option 2</option>
-            <option>Option 3</option>
-        </select>
-        <button type="button">Absenden</button>
+        <h1>Scannen Sie Ihr Unternehmen für einen detaillierten Google-Bewertungsanalysebericht</h1>
+        <p>Führen Sie den 20-Sekunden-Scan durch, um Ihre Google-Bewertungen sofort zu analysieren und genau zu sehen, was verbessert werden muss.
+        <br />Sie erhalten das Ergebnis umgehend per E-Mail.</p>
+        <div class="deftform" data-form-id="968baa5e-9a5d-41d8-841d-e5b748444d76" data-form-width="100%" data-form-align="center" data-form-auto-height="1"></div><script src="https://cdn.deftform.com/embed.js"></script>
     </div>
 </body>
 </html>
